[package]
name = "testing_ground"
version = "0.1.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]

[dependencies]
maplit = "0.1.5"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.4"
noise = "0.4.1"
rand = "0.3"
rustyline = "1.0.0"
piston_window = "0.73.0"
piston-ai_behavior = "0.22.0"
find_folder = "0.3.0"
piston2d-sprite = "0.40.0"
lazy_static = "0.2.9"
array-init = "0.0.2"
image = "0.17.0"
